--- a/[Algo]_Level3_여행경로.ipynb
+++ b/[Algo]_Level3_여행경로.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db6ce0ae",
+   "id": "88b63096",
    "metadata": {},
    "source": [
     "### 내 풀이"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "20d1d63b",
+   "id": "f5ad8b7d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-28T15:35:23.236766Z",
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3c11562f",
+   "id": "27c77cea",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-28T15:35:43.744625Z",
@@ -83,27 +83,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ab1419f4",
+   "execution_count": 17,
+   "id": "556d63a8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-28T15:36:44.842817Z",
-     "start_time": "2022-07-28T15:36:44.836094Z"
+     "end_time": "2022-07-28T15:43:53.614566Z",
+     "start_time": "2022-07-28T15:43:53.604383Z"
     }
    },
    "outputs": [],
    "source": [
-    "tickets=[[\"ICN\", \"SFO\"], [\"ICN\", \"ATL\"], [\"SFO\", \"ATL\"], [\"ATL\", \"ICN\"], [\"ATL\",\"SFO\"]]"
+    "tickets=[[\"ICN\", \"SFO\"], [\"ICN\", \"ATL\"], [\"SFO\", \"ATL\"], [\"ATL\",\"SFO\"],[\"ATL\", \"ICN\"] ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "bbbb8aee",
+   "execution_count": 18,
+   "id": "aac61bb4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-28T15:36:45.019705Z",
-     "start_time": "2022-07-28T15:36:45.012139Z"
+     "end_time": "2022-07-28T15:43:53.962413Z",
+     "start_time": "2022-07-28T15:43:53.956059Z"
     }
    },
    "outputs": [],
@@ -111,18 +111,18 @@
     "r = defaultdict(list)\n",
     "for i,j in tickets:\n",
     "    r[i].append(j)\n",
-    "for i in r.keys():\n",
-    "    r[i].sort()"
+    "# for i in r.keys():\n",
+    "#     r[i].sort()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7695e140",
+   "execution_count": 19,
+   "id": "73752c2a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-28T15:36:45.957371Z",
-     "start_time": "2022-07-28T15:36:45.947043Z"
+     "end_time": "2022-07-28T15:43:54.488528Z",
+     "start_time": "2022-07-28T15:43:54.481964Z"
     }
    },
    "outputs": [
@@ -130,10 +130,10 @@
      "data": {
       "text/plain": [
        "defaultdict(list,\n",
-       "            {'ICN': ['ATL', 'SFO'], 'SFO': ['ATL'], 'ATL': ['ICN', 'SFO']})"
+       "            {'ICN': ['SFO', 'ATL'], 'SFO': ['ATL'], 'ATL': ['SFO', 'ICN']})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82ecbde7",
+   "id": "df4ba0d7",
    "metadata": {},
    "source": [
     "똑같은 티켓 여러개 있는 경우 예외처리가 어떻게 되는지 보기"
@@ -152,15 +152,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0fb3a86d",
+   "execution_count": 20,
+   "id": "b68a2c6d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-28T15:36:10.668087Z",
-     "start_time": "2022-07-28T15:36:10.654117Z"
+     "end_time": "2022-07-28T15:43:55.673553Z",
+     "start_time": "2022-07-28T15:43:55.659573Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s=['ICN', 'SFO']\n",
+      "s=['ICN', 'SFO', 'ATL']\n",
+      "s=['ICN', 'SFO', 'ATL', 'SFO']\n",
+      "p=['SFO']\n",
+      "s=['ICN', 'SFO', 'ATL', 'ICN']\n",
+      "s=['ICN', 'SFO', 'ATL', 'ICN', 'ATL']\n",
+      "p=['SFO', 'ATL']\n",
+      "p=['SFO', 'ATL', 'ICN']\n",
+      "p=['SFO', 'ATL', 'ICN', 'ATL']\n",
+      "p=['SFO', 'ATL', 'ICN', 'ATL', 'SFO']\n",
+      "p=['SFO', 'ATL', 'ICN', 'ATL', 'SFO', 'ICN']\n"
+     ]
+    }
+   ],
    "source": [
     "s = [\"ICN\"]\n",
     "p = []\n",
@@ -168,14 +186,16 @@
     "    q = s[-1]\n",
     "    if r[q] != []:\n",
     "        s.append(r[q].pop(0))\n",
+    "        print(f\"{s=}\")\n",
     "    else:\n",
-    "        p.append(s.pop())"
+    "        p.append(s.pop())\n",
+    "        print(f\"{p=}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b023bcd6",
+   "id": "29af95c6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-28T15:36:36.180233Z",
@@ -199,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91bf347f",
+   "id": "77ded1f0",
    "metadata": {},
    "outputs": [],
    "source": []
