--- a/[Algo]_Level3_베스트앨범.ipynb
+++ b/[Algo]_Level3_베스트앨범.ipynb
@@ -13,6 +13,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "633d74e6",
+   "metadata": {},
+   "source": [
+    "### 복습 1차 풀이"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0f69b34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(genres, plays):\n",
+    "    from collections import defaultdict, Counter\n",
+    "    c=Counter()\n",
+    "    gd=defaultdict(list)\n",
+    "    for i,s in enumerate(zip(genres,plays)):\n",
+    "        gd[s[0]].append((i,s[1]))\n",
+    "        c[s[0]]+=s[1]\n",
+    "    for g in genres:\n",
+    "        gd[g]=sorted(gd[g],key=lambda x:(-x[1],x[0]))\n",
+    "    result=[]\n",
+    "    for g in c.most_common():\n",
+    "        result.extend([i[0] for i in gd[g[0]][:2]])\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "88b63096",
    "metadata": {},
    "source": [
