--- a/[Algo]_Level2_소수_찾기.ipynb
+++ b/[Algo]_Level2_소수_찾기.ipynb
@@ -9,12 +9,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc6e3ac9",
+   "cell_type": "markdown",
+   "id": "bb30a7c7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "문자열이 주어진다. 각 문자열을 종이 조각이라고 생각하고, 조합하여 만들 수 있는 소수가 몇개인지 출력"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30,7 +30,22 @@
    "id": "77ded1f0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(numbers):\n",
+    "    from itertools import permutations\n",
+    "    def primenumber(x):\n",
+    "        for i in range (2, int(x**(1/2))+1):\t# 2부터 x의 제곱근까지의 숫자\n",
+    "            if x % i == 0:\t\t# 나눠떨어지는 숫자가 있으면 소수가 아님\n",
+    "                return False\n",
+    "        return True if x>1 else False\n",
+    "    result=[]\n",
+    "    for i in range(1,len(numbers)+1):\n",
+    "        for comb in permutations(numbers,i):\n",
+    "            num=int(''.join(comb))\n",
+    "            if num not in result and primenumber(num):\n",
+    "                result.append(num)\n",
+    "    return len(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,7 +61,9 @@
    "id": "ec705ae9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!"
+   ]
   }
  ],
  "metadata": {
