--- a/[Algo]_Level2_타겟_넘버.ipynb
+++ b/[Algo]_Level2_타겟_넘버.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56da5444",
+   "id": "dd4b4fe9",
    "metadata": {},
    "source": [
     "    문제: n개의 음이 아닌 정수들, 순서바꾸지않고 앞에 +나 -를 해서, 타겟 넘버 만드는 경우의수 출력\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbef08dd",
+   "id": "daadd7ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3df8b71",
+   "id": "10cac43d",
    "metadata": {},
    "source": [
     "### 내 풀이보다 2배 빠른 다른사람 풀이"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d97e00a8",
+   "id": "e190741e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-08-05T15:41:03.907296Z",
@@ -113,23 +113,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "c3708327",
+   "execution_count": 74,
+   "id": "b470d639",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-05T15:40:49.758237Z",
-     "start_time": "2022-08-05T15:40:49.740786Z"
+     "end_time": "2022-08-06T04:51:09.775918Z",
+     "start_time": "2022-08-06T04:51:09.767602Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, -4), (1, -1), (2, -2), (1, -1)]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "l = [(x, -x) for x in numbers]"
+    "l = [(x, -x) for x in numbers]\n",
+    "l"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "2b528c45",
+   "id": "61cfc3d9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-08-05T15:41:39.053886Z",
@@ -170,14 +182,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80bdc5ad",
+   "id": "0a8db706",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c60f7dcc",
+   "id": "446ead6c",
    "metadata": {},
    "source": [
     "### 연습"
@@ -203,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "fc1c2c48",
+   "id": "2cd72e6f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-08-05T15:34:55.427578Z",
@@ -220,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "5c5bb7b5",
+   "id": "380424e9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-08-05T15:34:55.754261Z",
@@ -249,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "9afe52ce",
+   "id": "799678e1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-08-05T15:34:57.329305Z",
@@ -275,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "838a93a4",
+   "id": "b9865f64",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-08-05T15:34:58.272331Z",
@@ -308,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "b32d3aa5",
+   "id": "29d27923",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-08-05T15:34:58.856772Z",
