--- a/Level3_네트워크.ipynb
+++ b/Level3_네트워크.ipynb
@@ -107,14 +107,12 @@
    "outputs": [],
    "source": [
     "def solution(n, computers):\n",
-    "    visited=[0]*n\n",
-    "    answer=0\n",
-    "    def dfs(pc): # dfs로 연결된 부분 쭉 탐색\n",
+    "    def dfs(pc):\n",
     "        visited[pc]=1\n",
     "        for idx,c in enumerate(computers[pc]):\n",
     "            if c and visited[idx]==0:\n",
     "                dfs(idx)\n",
-    "                \n",
+    "    answer,visited=0,[0]*n\n",
     "    for pc in range(n):\n",
     "        if visited[pc] == 0:\n",
     "            dfs(pc)\n",
