--- a/Level0_제목.ipynb
+++ b/Level0_제목.ipynb
@@ -10,13 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fc6e3ac9",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-14T10:53:40.360272Z",
+     "start_time": "2022-10-14T10:53:40.224753Z"
+    }
+   },
    "outputs": [],
    "source": [
     "! # 시작시간 체크"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faf2532c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
