--- a/Level2_가장_큰수.ipynb
+++ b/Level2_가장_큰수.ipynb
@@ -30,7 +30,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "7e3ef9cf",
+   "id": "9eec2bed",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f04564a",
+   "id": "34c66293",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-21T11:52:19.046270Z",
@@ -58,7 +58,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "09ece4ca",
+   "id": "311c72c3",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec86039c",
+   "id": "5e3536e1",
    "metadata": {},
    "source": [
     "### 좀 더 짧은 풀이"
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "676f35cf",
+   "id": "14312860",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-21T16:23:07.750700Z",
@@ -126,7 +126,7 @@
    "outputs": [],
    "source": [
     "def solution(numbers):    \n",
-    "    return ''.join(sorted(map(str,numbers), key=lambda x: x*3)[::-1])"
+    "    return str(int(''.join(sorted(map(str,numbers), key=lambda x: x*3)[::-1])))"
    ]
   },
   {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fd8547c",
+   "id": "f0672454",
    "metadata": {},
    "source": [
     "상상 풀이\n",
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "52ac3784",
+   "id": "bf3f424c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-21T16:21:25.630812Z",
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fbd3c6ad",
+   "id": "a22ad8a0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-21T16:22:30.643463Z",
